[project]
name = "refresh-rpm-lockfiles"
version = "0.1.0"
description = "A post-upgrade task script that refreshes RPM lockfiles based on Dockerfile updates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
]

[project.scripts]
refresh-rpm-lockfiles = "refresh_rpm_lockfiles:run"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "types-pyyaml>=6.0.12.20250915",
]
